syntax = "proto3";

package buildbarn.scheduler;

import "build/bazel/remote/execution/v2/remote_execution.proto";

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/scheduler";

service Scheduler {
    rpc GetWork(stream build.bazel.remote.execution.v2.ExecuteResponse) returns (stream build.bazel.remote.execution.v2.ExecuteRequest);
}
